Stop blocking contents on Tablets

--- a/styles/_base.sass
+++ b/styles/_base.sass
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;900&display=swap')
-$main-font: 'Fira Sans', sans-serif
+$main-typeface: 'Fira Sans', sans-serif
 
 // DESKTOP FONT SIZES
 $df1: 3rem //48px
@@ -21,6 +21,6 @@ $main-font-color: #ffffff
   margin: 0
   padding: 0
   box-sizing: border-box
-  font-family: $main-font 
+  font-family: $main-typeface 
   font-size: $mf3
   color: $main-font-color
