--- a/styles/_components.sass
+++ b/styles/_components.sass
@@ -1,7 +1,3 @@
-// PHONE
-.not-for-tablets
-  display: none
-
 // GENERAL
 body
   background-color: $main-bg-color
@@ -29,16 +25,6 @@ h2
   width: 300px
   height: 300px
   border-radius: 500px;
-
-// TABLET
-@media (min-width: 43.75em) and (max-width: 64em)
-  // Block contents on Tablets
-  body :not(.not-for-tablets) 
-    display: none
-  
-  // Say that this website is not for Tablets
-  .not-for-tablets
-    display: inline
 
 // DESKTOP
 @media screen and (min-width: 64em)
