--- a/styles/main.css
+++ b/styles/main.css
@@ -44,10 +44,6 @@
   }
 }
 
-.not-for-tablets {
-  display: none;
-}
-
 body {
   background-color: #652e73;
 }
@@ -79,15 +75,6 @@ h2 {
   width: 300px;
   height: 300px;
   border-radius: 500px;
-}
-
-@media (min-width: 43.75em) and (max-width: 64em) {
-  body :not(.not-for-tablets) {
-    display: none;
-  }
-  .not-for-tablets {
-    display: inline;
-  }
 }
 
 @media screen and (min-width: 64em) {
